cmake_minimum_required(VERSION 3.15)
project(DataStructure_C C)

set(CMAKE_C_STANDARD 99)

#add_executable(DataStructure_C SelectionSort.c)
#add_executable(DataStructure_C Assignment1_Program_1.4.c)
#add_executable(DataStructure_C Assignment1_Program_1.7.c)
#add_executable(DataStructure_C Assignment1_Problem_1.4_a.c)
#add_executable(DataStructure_C Assignment1_Problem_1.4_b.c)
#add_executable(DataStructure_C Assignment1_Problem_1.4_c.c)
add_executable(DataStructure_C Assignment1_Problem_2_a.c)
#add_executable(DataStructure_C Assignment1_Problem_2_b.c)
#add_executable(DataStructure_C  Assignment1_Problem_3.c)